--- a/docs/docu.qmd
+++ b/docs/docu.qmd
@@ -159,12 +159,12 @@ L’exécution du projet génère des visualisations interactives et des cartes 
 
 Les résultats sont stockés dans `Cycle3/visualisation/` et incluent des cartes des trajets et des prévisions de trafic.
 
-## 2.6 Documentation et tests [FINISH AND RECHECKED]
+## 2.6 Documentation et tests
 
 Pour garantir la qualité du code, le projet intègre :
 
 - **Tests Unitaires** : Vérification des fonctionnalités principales.  
-- **Documentation Technique** : Générée avec **Sphinx** et **Quarto** pour détailler les API, les méthodes et les résultats.
+- **Documentation Technique** : Rédigée avec **Quarto** pour détailler les API, les méthodes et les résultats. Une tentative de création avec **Sphinx** a été effectuée, mais elle n’a pas abouti en raison de difficultés techniques.
 
 # 3. Description des Données
 
@@ -412,8 +412,6 @@ Alice,30,Paris
 Bob,25,Lyon
 ```  
 Appeler `colonne(1, "data.csv")` retourne `[30, 25]`.  
-
-[PUT ILLUSTRATION OF FUNCTION HERE]
 </details>
 
 <details> 
@@ -453,7 +451,7 @@ Pour le fichier `data.csv` ci-dessus, appeler `arg("Alice", 0, 2, "data.csv")` r
   <summary>`nettoyer_adresse_normalise(adresse)`</summary>
 
 **Description**:  
-Nettoie et normalise une adresse en supprimant les caractères spéciaux, doublons, et autres anomalies.  
+Nettoie et normalise une adresse en supprimant les numéros au début, en normalisant les caractères Unicode..  
 
 **Paramètres**:  
 - `adresse` (str) : L'adresse à normaliser.  
@@ -464,16 +462,6 @@ Nettoie et normalise une adresse en supprimant les caractères spéciaux, doublo
 **Code de la fonction**:  
 ```python
 def nettoyer_adresse_normalise(adresse):
-    """
-    Nettoie et normalise une adresse en supprimant les numéros au début, 
-    en normalisant les caractères Unicode.
-    
-    Paramètre :
-    adresse (str) : La chaîne d'adresse à normaliser.
-    
-    Retourne :
-    str : L'adresse nettoyée et normalisée.
-    """
     # Tenter de corriger l'encodage si nécessaire
     try:
         # Encode la chaîne en latin1 puis décode en utf-8
@@ -495,14 +483,13 @@ def nettoyer_adresse_normalise(adresse):
 - Avant : `"  12, Rue de la République  "`  
 - Après : `"12 rue de la république"`  
 
-[PUT ILLUSTRATION OF CLEANED ADDRESS HERE]
 </details>
 
 <details> 
   <summary>`coordonne(station)`</summary>
 
 <strong>Description :</strong>  
-Cette fonction permet de géocoder le nom d'une station pour obtenir ses coordonnées géographiques (latitude et longitude). Elle utilise la bibliothèque `osmnx` pour rechercher l'emplacement correspondant à la station spécifiée dans la ville de Montpellier, France.
+La fonction `coordonne` utilise le géocodage pour obtenir les coordonnées géographiques (latitude, longitude) d'une station donnée dans la ville de Montpellier, France.
 
 <strong>Paramètres :</strong> 
   <ul>
@@ -532,10 +519,10 @@ Cette fonction permet de géocoder le nom d'une station pour obtenir ses coordon
 #### Fonctions liées à la carte
 
 <details> 
-  <summary>`gen_carte_trajet(ligne, G, m, index_colonne_départ, index_colonne_arrive, couleur)`</summary>
+  <summary>`gen_carte_trajet(ligne, G, m, index_colonne_départ, index_colonne_arrive,couleur)`</summary>
 
 **Description**:  
-Génère une carte interactive pour visualiser un trajet spécifique sur un graphe `G` en utilisant une bibliothèque de cartographie.  
+Génère une carte interactive affichant le trajet le plus court entre deux points.  
 
 **Paramètres**:  
   <ul>
@@ -548,7 +535,7 @@ Génère une carte interactive pour visualiser un trajet spécifique sur un grap
   </ul> 
 
 **Retourne**:  
-- `map` (Map) : Une carte avec le trajet ajouté.  
+- `folium.Map` (Map) : La carte mise à jour avec le trajet et les marqueurs des points de départ et d'arrivée..  
 
 **Code de la fonction**:  
 ```python
@@ -563,14 +550,14 @@ def gen_carte_trajet(ligne, G, m, index_colonne_départ, index_colonne_arrive,co
             print(f"Erreur de géocodage pour les stations : {ligne[index_colonne_départ]} ou {ligne[index_colonne_arrive]}")
             return m
         
-        # Trouver les nœuds les plus proches de l'origine et de la destination
+        # Trouver les noeuds les plus proches de l'origine et de la destination
         origin_node = ox.nearest_nodes(G, origin[1], origin[0])  # longitude, latitude
         destination_node = ox.nearest_nodes(G, destination[1], destination[0])  # longitude, latitude
 
         # Calculer l'itinéraire aller et retour
         route = ox.shortest_path(G, origin_node, destination_node)
 
-        # Fonction pour convertir un itinéraire (liste de nœuds) en liste de coordonnées géographiques
+        # Fonction pour convertir un itinéraire (liste de noeuds) en liste de coordonnées géographiques
         def route_to_coords(G, route):
             route_coords = []
             for node in route:
@@ -595,7 +582,6 @@ def gen_carte_trajet(ligne, G, m, index_colonne_départ, index_colonne_arrive,co
     
     return m
 ```
-[PUT ILLUSTRATION OF TRAJECTORY MAP HERE]
 </details>
 
 <details> 
@@ -1016,14 +1002,14 @@ def map_trajets(j, h,jour):
   <summary>`pd_to_datetime(df, colonne_date)`</summary>
 
 **Description**:  
-Convertit une colonne d'un DataFrame Pandas en type datetime. Supprime les valeurs non valides.  
+Convertit une colonne de dates dans un DataFrame pandas en un format datetime, crée une nouvelle colonne avec uniquement la date, et supprime la colonne d'origine.  
 
 **Paramètres**:  
 - `df` (DataFrame) : DataFrame Pandas.  
 - `colonne_date` (str) : Nom de la colonne à convertir.  
 
 **Retourne**:  
-- `df` (DataFrame) : DataFrame avec la colonne convertie.  
+- `df` (pandas.DataFrame) : Le DataFrame modifié avec une colonne 'Date' contenant les dates extraites, et sans la colonne d'origine `colonne_date`..  
 
   <strong>Code de la fonction :</strong>
 
@@ -1526,7 +1512,7 @@ def trajets_parcourus_jour(j):
 
 ### 6.2.3 Video
 
-  <details> 
+<details> 
     <summary>`chemin_court(row)`</summary>
 
     **Description**:  
@@ -1539,8 +1525,8 @@ def trajets_parcourus_jour(j):
     - `chemin (list)` : Une liste d'identifiants représentant le chemin optimal.  
     - `duration (float)` : La durée totale en secondes pour le trajet donné.
 
-    **Code de la fonction**:  
-    ```python
+**Code de la fonction**:  
+```python
     def chemin_court(row):
         try:
             depart_lat, depart_lon = row['latitude_depart'], row['longitude_depart']
@@ -1560,10 +1546,10 @@ def trajets_parcourus_jour(j):
     **Exemple d'utilisation**:  
     Lorsqu'une ligne du DataFrame est passée, cette fonction renvoie le chemin le plus court calculé sur la base du graphe routier et la durée du trajet.
 
-  </details>
+</details>
 
 
-  <details> 
+<details> 
     <summary>`init()`</summary>
 
     **Description**:  
@@ -1572,13 +1558,13 @@ def trajets_parcourus_jour(j):
     **Retourne**:  
     - `points (list)` : Une liste d'objets `matplotlib` représentant les points à animer.  
 
-    **Code de la fonction**:  
-    ```python
+**Code de la fonction**:  
+```python
     def init():
         for point in points:
             point.set_data([], [])
         return points
-    ```
+```
 
     **Exemple d'utilisation**:  
     Cette fonction est utilisée comme étape préliminaire pour configurer l'état de l'animation avant chaque itération.
@@ -1586,7 +1572,7 @@ def trajets_parcourus_jour(j):
   </details>
 
 
-  <details> 
+<details> 
     <summary>`update(frame)`</summary>
 
     **Description**:  
@@ -1598,8 +1584,8 @@ def trajets_parcourus_jour(j):
     **Retourne**:  
     - `points (list)` : Les nouvelles positions des points mis à jour pour l'animation.
 
-    **Code de la fonction**:  
-    ```python
+**Code de la fonction**:  
+```python
     def update(frame):
         current_time = start_time + datetime.timedelta(seconds=frame * frame_duration)
         time_text.set_text(current_time.strftime('%Y-%m-%d %H:%M:%S'))
@@ -1614,7 +1600,7 @@ def trajets_parcourus_jour(j):
                 points[i].set_data([x], [y])
 
         return points
-    ```
+```
 
     **Exemple d'utilisation**:  
     Chaque frame appelée dans la boucle d'animation utilise cette fonction pour déplacer les points selon la progression de leur chemin respectif.
@@ -1629,7 +1615,7 @@ def trajets_parcourus_jour(j):
   - Chaque point représente un véhicule dans le réseau routier avec ses trajets correspondant à la base donnée `video_avec_coord.csv`.
   - L'animation est synchronisée avec la base de données et simule la trajectoire temporelle.
 
-## 6.3 Class "GestionnaireDonnees"
+## 6.3 La classe "GestionnaireDonnees"
 
 La classe `GestionnaireDonnees` a été créée pour gérer le téléchargement, la lecture et le traitement des jeux de données. Elle centralise les fonctions nécessaires à la gestion des données pour notre projet, en permettant le téléchargement de fichiers depuis des URLs, l'extraction de fichiers compressés, et le chargement de fichiers CSV tout en nettoyant les données manquantes. Elle simplifie ainsi les tâches courantes liées à la gestion des données dans notre système.
 
@@ -1655,7 +1641,7 @@ Initialise le répertoire de téléchargement pour stocker les fichiers téléch
 **Retourne**:  
 - Rien. Cette méthode configure uniquement les attributs d'instance.
 
-**Code de la fonction**:
+**Code de la fonction**:  
 ```python
 def __init__(self, repertoire_telechargement="./data"):
     self.repertoire_telechargement = repertoire_telechargement
@@ -1687,8 +1673,8 @@ Télécharge un fichier à partir d'une URL donnée et l'enregistre dans le rép
 **Retourne**:  
 - `chemin` (str) : Le chemin complet du fichier téléchargé.
 
-**Code de la fonction**:
-```python
+**Code de la fonction**:  
+    ```python
 def telecharger_fichier(self, url, nom_fichier):
     chemin = pooch.retrieve(
         url=url,
@@ -1725,7 +1711,7 @@ Charge un fichier CSV dans un DataFrame Pandas, avec la possibilité de supprime
 **Retourne**:  
 - `dataframe` (pd.DataFrame) : Le DataFrame contenant les données du fichier CSV.
 
-**Code de la fonction**:
+**Code de la fonction**:  
 ```python
 def charger_csv(self, chemin_fichier, supprimer_na=True):
     dataframe = pd.read_csv(chemin_fichier)
@@ -1759,7 +1745,7 @@ Extrait le contenu d'un fichier ZIP dans un répertoire spécifié.
 **Retourne**:  
 - `dossier_extraction` (str) : Le chemin du dossier contenant les fichiers extraits.
 
-**Code de la fonction**:
+**Code de la fonction**:  
 ```python
 def extraire_zip(self, chemin_zip, dossier_extraction=None):
     if dossier_extraction is None:
@@ -1775,6 +1761,7 @@ def extraire_zip(self, chemin_zip, dossier_extraction=None):
 Cette méthode extrait un fichier ZIP dans un répertoire spécifié ou, si aucun répertoire n'est précisé, dans un sous-dossier nommé `extracted`. Après extraction, le fichier ZIP est supprimé pour économiser de l'espace disque.
 
 **Exemple d'utilisation**:
+
 ```python
 gestionnaire = GestionnaireDonnees()
 chemin_extraction = gestionnaire.extraire_zip("./data/archive.zip")
@@ -2001,15 +1988,12 @@ La commande suivante permet d’exécuter tous les tests :
 ```bash
 pytest tests/
 ```
-## 7.5 Intégration continue [RECHEK]
 
-Les tests sont intégrés au processus d’intégration continue (CI) via GitHub Actions. Cela garantit que chaque mise à jour du code est automatiquement testée, minimisant ainsi les risques d’introduire des régressions.
-
-## 7.6 Conclusion
+## 7.5 Conclusion
 
 Les tests réalisés ont permis de valider la majorité des fonctionnalités critiques du projet. Toutefois, des améliorations supplémentaires pourraient être envisagées, notamment pour couvrir des cas d’utilisation moins fréquents ou des scénarios extrêmes.
 
-# 8. Performance Analysis
+# 8. Analyse des performances
 
 #### *Étude du temps et de la mémoire*
 ---
@@ -2060,7 +2044,7 @@ Pour accéder au projet et à sa structure, commencez par cloner notre répertoi
 git clone https://github.com/mscaia/PROJ_HAX712X.git
 cd ./PROJ_HAX712X
 ```
-## 9.2 Installation des packages nécessaire
+## 9.2 Installation des packages nécessaires
 
 On vous conseille de créer un environnement virtuel, il permet d'isoler les dépendances d'un projet, d'éviter les conflits de versions, et de garantir un contrôle simple sur les paquets installés. Il assure la reproductibilité du projet, facilite la gestion des dépendances, et protège votre système.
 ```bash
@@ -2073,7 +2057,7 @@ pip install -r requirements.txt
 ```
 Après cette commande, l'environnement virtuel `Cycle3` occupera environ 1 Go de votre espace. Vous êtes maintenant prêt à utiliser notre projet avec tous les packages nécessaires.
 
-## 9.3 Comment lancer certain script
+## 9.3 Comment lancer le certain script
 
 Tous les scripts doivent être exécutés depuis le terminal. Assurez-vous que vous êtes dans la racine du projet, nommée `PROJ_HAX712X`. Dans les chemins relatifs, `./ `fait référence à la racine du projet.
 
@@ -2084,7 +2068,7 @@ Téléchargez les données nécessaires pour travailler (nous avons choisi de le
  python ./src/donnée.py
 ```
 
-### Voir nos éléments d'analyse de donnée.
+### Voir nos éléments d'analyse de données
 
 Pour voir les éléments d'analyse des données, lancez la commande suivante :
 ```bash
@@ -2130,7 +2114,7 @@ La carte générée est sauvegardée dans `./Cycle3/visualisation/carte_montpell
 
 2. **Création de la vidéo**
 
-**Attention : Ce processus peut être long. Veuillez vous référer à la section 8. Performance Analysis de la documentation pour plus d'informations.**
+**Attention : Ce processus peut être long. Veuillez vous référer à la section [8. Analyse des performances](#performance-analysis) de la documentation pour plus d'informations.**
 Lancez la commande suivante pour créer la vidéo :
 ```bash
  python ./Cycle3/vidéo/vidéo.py
